--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "https://hyperdev.com/#!/project/welcome-project"
+    "url": "https://github.com/saclark12000/ISQA-Metric-Imperial-Converter"
   },
   "keywords": [
     "node",
