--- a/package.json
+++ b/package.json
@@ -1,10 +1,7 @@
 {
-  "//1": "describes your app and its dependencies",
-  "//2": "https://docs.npmjs.com/files/package.json",
-  "//3": "updating this file will download and update your packages",
-  "name": "my-hyperdev-app",
+  "name": "ISQA-Metric-Imperial-Converter",
   "version": "0.0.1",
-  "description": "What am I about?",
+  "description": "freeCodeCamp ISQA Project 1",
   "main": "server.js",
   "scripts": {
     "start": "node server.js"
